force-app/main/default/objects/DART_Setting__mdt/DART_Setting__mdt.object-meta.xml
<CustomObject>
    <label>DART Setting</label>
    <pluralLabel>DART Settings</pluralLabel>
</CustomObject>