force-app/main/default/objects/DART_Setting__mdt/fields/Crtfc_Key__c.field-meta.xml
<CustomField>
    <fullName>Crtfc_Key__c</fullName>
    <description>DART OpenAPI 호출 시 쿼리 파라미터(crtfc_key)로 전달하는 40자리 인증키.</description>
    <inlineHelpText>DART에서 발급받은 40자리 API 인증키를 입력하세요.</inlineHelpText>
    <label>인증키</label>
    <length>100</length>
    <type>Text</type>
</CustomField>