force-app/main/default/objects/DART_Setting__mdt/fields/Signal_Relevance_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Signal_Relevance_Threshold__c</fullName>
    <description>이 값 이상의 Relevance_Score__c 를 가진 ExternalSignal__c 발생 시 담당 RM 에게 알림을 보낸다. 미설정 시 알림 로직의 기본값을 사용한다.</description>
    <inlineHelpText>RM 알림을 트리거할 연관성 점수 임계값을 입력하세요. 예: 70</inlineHelpText>
    <label>시그널 연관성 임계값</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>